[gd_scene load_steps=3 format=3 uid="uid://race_hud_001"]

[ext_resource type="Script" path="res://ui/race_hud.gd" id="1_race_hud"]
[ext_resource type="Texture2D" path="res://ui/assets/zhazhda-speed.png" id="2_bg"]

[node name="RaceHUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_race_hud")

[node name="CountdownLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 200
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "00:00.00"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="FinishBanner" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -50.0
offset_right = 960.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="BannerBg" type="ColorRect" parent="FinishBanner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.15, 0.85)

[node name="BannerText" type="Label" parent="FinishBanner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0.85, 0.7, 0.1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 52
text = "ЗАЕЗД ОКОНЧЕН"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="Background" type="TextureRect" parent="LoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="LoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.3)

[node name="VBox" type="VBoxContainer" parent="LoadingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="LoadingPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "ГОНКА"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="LoadingPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Загрузка трассы..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="LoadingPanel/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="ResultPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="Background" type="TextureRect" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="VBox" type="VBoxContainer" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="FinishLabel" type="Label" parent="ResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 64
text = "РЕЗУЛЬТАТЫ"
horizontal_alignment = 1

[node name="HSpacer1" type="Control" parent="ResultPanel/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TrackLabel" type="Label" parent="ResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 32
text = "Трасса: Пионерская"
horizontal_alignment = 1

[node name="HSpacer2" type="Control" parent="ResultPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TimeTitle" type="Label" parent="ResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Ваше время:"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="ResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 96
text = "00:00.00"
horizontal_alignment = 1

[node name="HSpacer3" type="Control" parent="ResultPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonBox" type="HBoxContainer" parent="ResultPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="ResultPanel/VBox/ButtonBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Заново"

[node name="Spacer" type="Control" parent="ResultPanel/VBox/ButtonBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="MenuButton" type="Button" parent="ResultPanel/VBox/ButtonBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "В меню"

[connection signal="pressed" from="ResultPanel/VBox/ButtonBox/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="ResultPanel/VBox/ButtonBox/MenuButton" to="." method="_on_back_to_menu_pressed"]
